--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nws",
-    "lint": "standard",
-    "lint:fix": "standard --fix",
-    "test": "standard",
-    "pre-commit": "npm test"
+    "start": "nws -d ./example:./dist",
+    "lint": "standard './source/**.js'",
+    "lint:fix": "standard --fix './source/**.js'",
+    "test": "nyc mocha --recursive './specs/*.js' -r esm",
+    "test:debug": "mocha --recursive './specs/*.js' --inspect-brk --check-leaks --globals Blob,URL,Worker ",
+    "pre-commit": "npm test",
+    "build": "rollup source/WorkerWrapper.js --file dist/WorkerWrapper.bundle.js --format umd --name WorkerWrapper"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.2.0",
     "husky": "^1.1.4",
+    "mocha": "^5.2.0",
     "nws": "^1.1.1",
+    "nyc": "^13.1.0",
+    "rollup": "^0.67.3",
     "standard": "^12.0.1"
   }
 }
